aws/kubernetes/07-cert-manager-issuer.yaml
---
# Namespace for cert-manager
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    cert-manager.io/disable-validation: "true"
